Edited chat. Again.

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="UTF-8">
 
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/font-awesome.min.css">
+    <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@200;400;600;700;800&display=swap" rel="stylesheet">
 
     <script src='js/1.js'></script>
@@ -41,19 +41,6 @@
       </div>
     </form>
       </div>
-
-              <nav>
-  <ul class="topmenu">
-
-      <li>  <div id=menu>  <a href="#"><i class="fa fa-angle-down" id=fa-angle-down></i> <p id=films>Мои фильмы</p></a> </div>
-      <ul class="submenu">
-        <li><a href="">Item 1</a></li>
-        <li><a href="">Item 2</a></li>
-      </ul>
-    </li>
-
-  </ul>
-</nav>
 
               <div id=play><i class="fa fa-play-circle" id=fa-play-circle ></i></div>
 
